--- a/config.json
+++ b/config.json
@@ -1,1 +1,10 @@
-
+{
+  "devMode": "false",
+  "advancedMode": "false",
+  "language": "en-US",
+  "repository": [
+    "LaurentiuSandu93",
+    "Breadcrumbsmanual_testing_jira_gmail
+"
+  ]
+}
