--- a/config.json
+++ b/config.json
@@ -4,7 +4,6 @@
   "language": "en-US",
   "repository": [
     "LaurentiuSandu93",
-    "Breadcrumbsmanual_testing_jira_gmail
-"
+    "manual_testing_jira_gmail"
   ]
 }
